Bug 636906 - GFX blacklisting not affecting WebGL; r=joe a=hardblocker